<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ch_logo"
        android:layout_centerInParent="true"
        android:alpha=".1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="25dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Welcome"
            android:textColor="@color/grey_light"
            android:textStyle="bold"
            android:textSize="35sp"
            android:gravity="center"
            android:padding="50dp"
            android:layout_marginTop="50dp"
            android:textAllCaps="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.hbb20.CountryCodePicker
                android:id="@+id/code_Picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                app:ccp_textSize="15sp"
                app:ccp_contentColor="@color/maroon"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="false"
                android:layout_centerVertical="true"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/phone_Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:layout_toEndOf="@+id/code_Picker"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_dark"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/maroon" />

        <CheckBox
            android:id="@+id/terms_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/grey_dark"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:backgroundTint="@color/grey_light"
                android:padding="3dp"
                android:text="@string/sign_up"
                android:visibility="visible"
                android:layout_gravity="center_horizontal|bottom"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signUpProgress"
                android:visibility="gone"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sms_data_rates"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:textSize="10sp"
            android:textStyle="normal"
            tools:ignore="SmallSp" />

    </LinearLayout>

</RelativeLayout>